2007-06-26  Mitz Pettel  <mitz@webkit.org>

Reviewed by Oliver.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14329
          REGRESSION: TEXTAREA - cannot drag-and-drop text at en.wikipedia.org/

        Test: fast/repaint/text-selection-rect-in-overflow-2.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::computeAbsoluteRepaintRect): Added code to account
        for overflow scroll and columns.
        * rendering/RenderText.cpp:
        (WebCore::RenderText::selectionRect): Adjust for columns only in the
        non-clipped case, since RenderObject::absolutePosition() does not.

2007-06-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Oliver.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=14329
          REGRESSION: TEXTAREA - cannot drag-and-drop text at en.wikipedia.org/

        * fast/repaint/resources/text-selection-rect-in-overflow-frame.html: Added.
        * fast/repaint/text-selection-rect-in-overflow-2-expected.checksum: Added.
        * fast/repaint/text-selection-rect-in-overflow-2-expected.png: Added.
        * fast/repaint/text-selection-rect-in-overflow-2-expected.txt: Added.
        * fast/repaint/text-selection-rect-in-overflow-2.html: Added.


Canonical link: https://commits.webkit.org/18586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23809 268f45cc-cd09-0410-ab3c-d52691b4dbfc